--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -47,6 +47,13 @@ dependencies {
 	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
 	implementation group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
 	implementation group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
+
+	//implementation group: 'de.codecentric', name: 'spring-boot-admin-starter-client', version: '2.3.1'
+	//implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+	//thymeleaf
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 }
 
 test {
